--- a/source/_templates/page.html
+++ b/source/_templates/page.html
@@ -1,17 +1,18 @@
+{% extends "!layout.html" %}
 {% set css_files = css_files + ["_static/custom.css"] %}
 
 {%- block extrahead %}
-<script type="text/javascript">
-    $(document).ready(function() {
-        //
-        //
-        $(".toggle > *").hide();
-        $(".toggle .admonition-title").show();
-        $(".toggle .admonition-title").click(function() {
-            $(this).parent().children().not(".admonition-title").toggle(400);
-            $(this).parent().children(".admonition-title").toggleClass("open");
-        })
-    });
-</script>
+  <script type="text/javascript">
+      $(document).ready(function() {
+          //
+          //
+          $(".toggle > *").hide();
+          $(".toggle .admonition-title").show();
+          $(".toggle .admonition-title").click(function() {
+              $(this).parent().children().not(".admonition-title").toggle(400);
+              $(this).parent().children(".admonition-title").toggleClass("open");
+          })
+      });
+  </script>
 {{ super() }}
 {% endblock %}
