--- a/source/themes/sphinx_rtd_theme/searchbox.html
+++ b/source/themes/sphinx_rtd_theme/searchbox.html
@@ -1,9 +1,8 @@
 {%- if 'singlehtml' not in builder %}
 <div role="search">
-  <form id="rtd-search-form" class="wy-form" action="{{ pathto('search') }}" method="get">
+  <form id="rtd-search-form" class="wy-form" action="https://duckduckgo.com/" method="get">
     <input type="text" name="q" placeholder="{{ _('Search docs') }}" />
-    <input type="hidden" name="check_keywords" value="yes" />
-    <input type="hidden" name="area" value="default" />
+    <input type="hidden" name="sites" value="https://linuxguideandhints.com" />
   </form>
 </div>
 {%- endif %}
